Use Integer/Character.valueOf instead of constructing a new instance